# bolt_ok

./: basic_test.py  debug_channel_requests.py  menu_validation_report.html  menu_validation_report.json  menu_validation_report.json~  requirements.txt  simple_flow_test.py  test_free_channel_flow.py  test_menu_validation.py  test_role_priority_logic.py  test_runner.py
mybot/: .env  .gitignore  BOLT_OK_TESTING_INFRASTRUCTURE_AUDIT_REPORT.md  CHECKLIST_IMPLEMENTACION_LUCIEN_DIANA.md  CLAUDE.md  CLAUDE.md~  CLEANUP_PLAN_2025-08-16.md  DATA_RECONCILIATION_ANALYSIS_2025-08-23.md  DATA_RECONCILIATION_ANALYSIS_2025-08-23_UNIFIED.md  DIAGRAMA_FLUJO_LUCIEN_DIANA.md  DIANA_BOT_MVP_ROADMAP.md  DIANA_MENU_SYSTEM.md  DIANA_MENU_SYSTEM_INTEGRATION_TEST_REPORT.md  Diana.md  INTEGRATION_ANALYSIS_2025-08-16.md  LUCIEN_DIANA_COMPONENTES_IMPLEMENTACION.md  LUCIEN_DIANA_IMPLEMENTATION_PLAN_2025-08-24.md  MODULE_COORDINATION_ENHANCEMENT_SUMMARY.md  MVP_IMPLEMENTATION_GUIDE.md  MVP_PROJECT_DASHBOARD.md  NARRATIVE_FRAGMENT_IMPLEMENTATION_SUMMARY.md  NARRATIVE_FRAGMENT_USAGE_EXAMPLES.md  NARRATIVE_PRODUCTION_READINESS_AUDIT.md  NARRATIVE_TEST_INFRASTRUCTURE_SUMMARY.md  Narrativo.md  PERSONALIZATION.md  PLAN_IMPLEMENTACION_LUCIEN_DIANA.md  POINT_SERVICE_TRANSACTION_SUMMARY.md  PROTECTION_TESTS_SUMMARY.md  README_SETUP.md  REPORTE_EJECUTIVO_LUCIEN_DIANA.md  SUBSCRIPTION_SERVICE_TRANSACTION_SUMMARY.md  TRANSACTION_SYSTEM_IMPLEMENTATION_GUIDE.md  TROUBLESHOOTING.md  VIP_2025-08-23.json  arquitectura.json  bot.py  bot2.py  debug.py  dev.sh  (+35 more)
mybot/agents/: diana-analytics-engineer.md  (+12 more)
(+337 files in other folders)
